Test/git-issues/git-issue-1887.dfy.expect
git-issue-1887.dfy(6,9): Error: selected element has type T which is incompatible with expected type char (seq<T> is incompatible with seq<char>)
git-issue-1887.dfy(11,8): Error: multi-selection has type seq<T> which is incompatible with expected type seq<char>
2 resolution/type errors detected in git-issue-1887.dfy
